@@ -36,12 +36,12 @@ common: &default_settings
   # When "true", the agent collects performance data about your 
   # application and reports this data to the NewRelic RPM service at 
   # newrelic.com. This global switch is normally overridden for each 
-  # environment below.
-  enabled: true
+  # environment below. (formerly called 'enabled')
+  monitor_mode: true
 
-  # Development mode should be off in every enviornment but
-  # development as it has very high overhead in memory
-  development: false
+  # Developer mode should be off in every environment but
+  # development as it has very high overhead in memory.
+  developer_mode: false
 
   # The newrelic agent generates its own log file to keep its logging
   # information separate from that of your application.  Specify its
@@ -165,9 +165,12 @@ common: &default_settings
   # external resource
   # disable_samplers: true
   
-  # For debugging overhead:
+  # If you aren't interested in visibility in these areas, you can disable
+  # the instrumentation to reduce overhead.
+  #
   # disable_view_instrumentation: true
-  # disable_ar_instrumentation: true
+  # disable_activerecord_instrumentation: true
+  # disable_memcache_instrumentation: true
   
   # Certain types of instrumentation such as GC stats will not work if 
   # you are running multi-threaded.  Please let us know.
@@ -185,16 +188,18 @@ common: &default_settings
 
 development:
   <<: *default_settings
-  # Turn off communication to RPM service in development mode.  
+  # Turn off communication to RPM service in development mode (also 
+  # 'enabled').
   # NOTE: for initial evaluation purposes, you may want to temporarily 
   # turn the agent on in development mode.
-  enabled: false
+  monitor_mode: false
 
   # Rails Only - when running in Developer Mode, the New Relic Agent will 
   # present performance information on the last 100 transactions you have
-  # executed since starting the mongrel.  to view this data, go to
-  # http://localhost:3000/newrelic
-  developer: true
+  # executed since starting the mongrel.
+  # NOTE: There is substantial overhead when running in developer mode.
+  # Do not use for production or load testing.  
+  developer_mode: true
   
   # Enable textmate links
   # textmate: true
@@ -203,7 +208,7 @@ test:
   <<: *default_settings
   # It almost never makes sense to turn on the agent when running
   # unit, functional or integration tests or the like.
-  enabled: false
+  monitor_mode: false
 
 # Turn on the agent in production for 24x7 monitoring.  NewRelic
 # testing shows an average performance impact of < 5 ms per
@@ -211,12 +216,12 @@ test:
 # incurring any user-visible performance degredation.
 production:
   <<: *default_settings
-  enabled: true
+  monitor_mode: true
 
 # Many applications have a staging environment which behaves
 # identically to production.  Support for that environment is provided
 # here.  By default, the staging environment has the agent turned on.
 staging:
   <<: *default_settings
-  enabled: true
+  monitor_mode: true
   app_name: My Application (Staging)
