@@ -1,4 +1,8 @@
 v2.10.1.
+  * renamed config settings: enabled => monitor_mode; developer => developer_mode;
+    old names will still work in newrelic.yml
+  * added config switches to turn off certain instrumentation when you aren't 
+    interested in the metrics, to save on overhead--see newrelic.yml for details. 
   * add profiling support to dev mode; very experimental!
   * add 'multi_threaded' config option to indicate when the app is running
     multi-threaded, so we can disable some instrumentation
